<resources>
    <string name="app_name">InstagramCloneApp</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="_0">0</string>
    <string name="nguy_n_v_n_ph">Nguyễn Văn Phó</string>
    <string name="bio">Bio</string>
    <string name="username">username</string>
    <string name="todo">TODO</string>
    <string name="timestamp">timeStamp</string>
    <string name="hello">TODO</string>
    <string name="user_profile_name">user profile name</string>
    <string name="user_name">user name</string>
    <string name="follow">Follow</string>
    <string name="edit_profile">Edit Profile</string>
</resources>