<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
android:layout_marginTop="10dp"
android:layout_marginLeft="100dp"
android:layout_marginRight="100dp"
android:layout_height="wrap_content"
android:id="@+id/layoutUser"
android:background="@drawable/button_black_background">

<RelativeLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerHorizontal="true"
    tools:ignore="UselessParent">

  <ImageView
      android:id="@+id/imageReceiverView"
      android:layout_width="120dp"
      android:layout_height="120dp"
      android:layout_marginTop="10dp"
      android:padding="5dp"
      android:layout_centerHorizontal="true"
      android:src="@drawable/profile"
      android:contentDescription="@string/hello" />

  <TextView
      android:id="@+id/nameViewUser"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:gravity="center"
      android:textSize="12sp"
      android:layout_marginTop="5dp"
      android:textColor="@color/colorPrimary"
      android:layout_below="@+id/imageReceiverView"
      android:text="@string/user_name" />

  <TextView
      android:id="@+id/emailViewUser"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:gravity="center"
      android:textSize="12sp"
      android:textStyle="bold"
      android:layout_marginTop="2dp"
      android:textColor="@color/colorPrimary"
      android:layout_below="@+id/nameViewUser"
      android:text="@string/user_profile_name" />

  <Button
      android:id="@+id/button"
      android:layout_width="90dp"
      android:layout_height="48dp"
      android:layout_below="@+id/emailViewUser"
      android:layout_centerHorizontal="true"
      android:layout_marginStart="10dp"
      android:layout_marginTop="10dp"
      android:layout_marginEnd="10dp"
      android:layout_marginBottom="10dp"
      android:background="@drawable/button_black_background"
      android:text="@string/follow"
      android:textAllCaps="false" />
</RelativeLayout>

</RelativeLayout>