<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.person.otherProfile">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout_profile_frag"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        >

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/Other_profile_toolbar"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="4dp"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="6dp"
            android:background="@android:color/white">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <TextView
                    android:id="@+id/Other_NamePerson"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/username"
                    android:textSize="18sp"
                    android:maxLines="1"
                    android:textStyle="bold"
                    android:textColor="@color/colorBlack"
                    android:layout_centerVertical="true"
                    />

                <ImageView
                    android:id="@+id/other_options_view"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/options"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    />
            </RelativeLayout>


        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:id="@+id/Other_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/app_bar_layout_profile_frag"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/Other_top_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="16dp"
                >

                <ImageView
                    android:id="@+id/Other_ImagePerson"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:src="@drawable/profile"
                    />

                <LinearLayout
                    android:layout_width="190dp"
                    android:layout_height="90dp"
                    android:layout_marginLeft="35dp"
                    android:layout_marginTop="15dp"
                    android:orientation="vertical"
                    >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal"
                        >

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:orientation="vertical"
                            >


                            <TextView
                                android:id="@+id/Other_Total_posts"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/_0"
                                android:textSize="12sp"
                                android:textStyle="bold"
                                android:textColor="@color/colorBlack"
                                />



                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Posts"
                                android:textSize="12sp"
                                android:textColor="@color/colorBlack"
                                />


                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="7dp"
                            android:gravity="center"
                            android:orientation="vertical"
                            >


                            <TextView
                                android:id="@+id/Other_total_followers"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="0"
                                android:textSize="12sp"
                                android:textStyle="bold"
                                android:textColor="@color/colorBlack"
                                />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Followers"
                                android:textSize="12sp"
                                android:textColor="@color/colorBlack"
                                />


                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="7dp"
                            android:gravity="center"
                            android:orientation="vertical"
                            >

                            <TextView
                                android:id="@+id/Other_total_following"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="0"
                                android:textSize="12sp"
                                android:textStyle="bold"
                                android:textColor="@color/colorBlack"
                                />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Following"
                                android:textSize="12sp"
                                android:textColor="@color/colorBlack"
                                />



                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/Other_mid_bar"
                android:padding="12dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >

                <TextView
                    android:id="@+id/Other_full_name_profile_frag"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nguy_n_v_n_ph"
                    android:textSize="13sp"
                    android:textStyle="bold"
                    android:textColor="@color/colorBlack"
                    />

                <TextView
                    android:id="@+id/Other_emailPerson"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bio"
                    android:textSize="13sp"
                    android:textColor="@color/colorBlack"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@drawable/button_black_background"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                >

                <ImageButton
                    android:id="@+id/Other_AddFriends"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="1dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:src="@drawable/add"
                    tools:ignore="SpeakableTextPresentCheck" />

                <ImageButton
                    android:id="@+id/Other_SendMessage"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="1dp"
                    android:layout_height="49dp"
                    android:layout_weight="1"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_send"
                    tools:ignore="SpeakableTextPresentCheck" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>


</RelativeLayout>